level switching, menus, bomberman level creator